--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,7 @@ services:
     networks:
       example.com:
         ipv4_address: 10.5.0.3
+
     ports:
       - "38080:8080"
 
@@ -63,4 +64,10 @@ services:
 
 networks:
   example.com:
-    external: true
+    name: example.com
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 10.5.0.0/24
+          ip_range: 10.5.0.0/24
+          gateway: 10.5.0.254
