fixup! Setup Kerberos and SSL for Presto in entrypoint

--- a/krb5-centos/presto/Dockerfile
+++ b/krb5-centos/presto/Dockerfile
@@ -10,6 +10,7 @@ COPY ./services/krb5/client/krb5.conf /etc/krb5.conf
 # Setup entrypoint
 COPY ./services/presto/entrypoint.sh /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
+CMD ["/usr/lib/presto/bin/launcher", "run"]
 
 # Expose HTTPS
 EXPOSE 7778
