--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -13,11 +13,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - name: Build image
+        run: ./build-image.sh
       - name: Run tests
         run: |
-          bash start.sh
+          docker-compose up -d
           sleep 20
-          bash test.sh
+          ./test.sh
       - name: Dunp logs
         if: always()
         run: |
