--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,7 +1,7 @@
 ---
 name: Integration tests
 
-on:
+on:  # yamllint disable-line rule:truthy
   push:
     branches: ['develop', 'master']
   pull_request:
