--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -16,10 +16,10 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build image
         run: docker-compose build
+      - name: Start environment
+        run: docker-compose up -d
       - name: Run tests
-        run: |
-          docker-compose up -d
-          ./test.sh
+        run: ./test.sh
       - name: Dunp logs
         if: always()
         run: docker-compose logs
