--- a/krb5-centos/kdc-server/Dockerfile
+++ b/krb5-centos/kdc-server/Dockerfile
@@ -7,6 +7,12 @@ FROM centos:8
 # build environment
 WORKDIR /root/
 
+# moving to old repos
+RUN cd /etc/yum.repos.d/ &&  \
+    sed -i 's/mirrorlist/#mirrorlist/g' /etc/yum.repos.d/CentOS-* && \
+    sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-* && \
+    yum update -y
+
 # Dev stuff
 RUN dnf -y install curl wget && dnf clean all
 
