--- a/krb5-centos/machine/Dockerfile
+++ b/krb5-centos/machine/Dockerfile
@@ -7,8 +7,7 @@ FROM centos:8
 # build environment
 WORKDIR /root/
 
-RUN cd /etc/yum.repos.d/ &&  \
-    sed -i 's/mirrorlist/#mirrorlist/g' /etc/yum.repos.d/CentOS-* && \
+RUN sed -i 's/mirrorlist/#mirrorlist/g' /etc/yum.repos.d/CentOS-* && \
     sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-*
 
 # Dev stuff
